--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "@nestjs/common": "^10.4.1",
     "@nestjs/core": "^10.4.1",
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "rxjs": "^7.8.1"
   }
