--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@nestjs/common": "^10.4.1",
     "@nestjs/core": "^10.4.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
